# job-scraper

./: main.py  models.py  pyproject.toml  test.csv
