[tool.poetry]
name = "job-scraper"
version = "0.1.0"
description = ""
authors = ["roycehoe <royceinbox@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
requests = "^2.31.0"
dataclass-csv = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
